@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.solarmovie.so"
-       name="[COLOR grey][COLOR goldenrod]S[/COLOR]olar[COLOR yellow]M[/COLOR]ovie.so[/COLOR]"
-       version="0.3.2"
+       name="S[COLOR goldenrod]o[/COLOR]lar[COLOR yellow]M[/COLOR][COLOR grey]ovie.so[/COLOR]"
+       version="0.3.3"
        provider-name="The[COLOR tan]Highway[/COLOR]">
   <requires>
-  	<import addon="xbmc.python" version="2.0"/>
+  	<import addon="xbmc.python" version="2.1.0"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
   	<provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
   	<summary>Handles Videos for SolarMovie.so</summary>
-  	<description>Play Movies and TV shows from SolarMovie.so.  Some of the Features:  Custom Labels for Multiple-Folder Favorites, Libraries, Find Air-Dates, Search, Advance Search, Some Download compatibility.</description>
+  	<description>Play Movies and TV shows from SolarMovie.so.  Some of the Features:  Custom Labels for Multiple-Folder Favorites, Libraries, Find Air-Dates, Search, Advance Search, Some Download compatibility.  Make sure that if you dont already have them installed to also install metahandlers, urlresolver, either t0mm0.common or addon.common and simple cache.</description>
   	<disclaimer lang="en">This Project is designed for xbmc v13.x originally and currently being kept up on one of the nightly xbmcc v13.x builds. It gets a slight bit of testing as I use it myself, a LOT, on a Windows 7 OS. Any other OS's / builds of xbmc have not be tested on yet, but I do feel free to try and test it out on them. Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing. I take no responsibility for any problems this plugin might in any way, form, shape or size cause. This is project is for a LEARNING EXPERIANCE.</disclaimer>
   	<language>en</language>
   	<platform>all</platform>
-  	<forum>http://www.xbmchub.com/forums/general-video-addon-discussion/9090-%5Binitial-release%5D-animeget-anime44.html</forum>
-  	<website>http://github.com/HIGHWAY99/plugin.video.solarmovie.so/</website>
-  	<email></email>
-  	<source></source>
+    <forum>http://www.xbmchub.com/forums/highway99s-xbmc-repo/</forum>
+    <website>http://www.xbmchub.com/</website>
   </extension>
 </addon>
